Fixed logo stretch and attr and resource padding

--- a/Chronoverse 2042/chronosheet.css
+++ b/Chronoverse 2042/chronosheet.css
@@ -616,16 +616,16 @@ input[type="radio"]:checked ~ input[type="radio"] + span::before {
 
 .charsheet .sheet-chrono-logo {
   grid-column: 1/-1;
-  background-image: url("https://i.imgur.com/dHQ6x3o.png");
+  /*background-image: url("https://i.imgur.com/dHQ6x3o.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;*/
   border:none;
-  background-color: #000;   
-  width:100%;
-  height: 260px;
   position: relative;
 }
 
+.charsheet .sheet-chrono-logo img {
+  width:100%;
+}
 .charsheet .sheet-chrono-panel.sheet-turn-tracker { /*custom*/
   width: 4em; 
   height: 2em;
@@ -635,6 +635,14 @@ input[type="radio"]:checked ~ input[type="radio"] + span::before {
   left: 5px;
 }
 
+.sheet-chrono-attr-row {
+  padding-right: 5px;
+}
+
+.sheet-chrono-resource-row {
+  padding-left: 15px;
+
+}
 .sheet-chrono-meditation-man {
   background: #fff; 
 }
